Rewrote code to support second parameter.

--- a/web/views/coverIn3Steps.html
+++ b/web/views/coverIn3Steps.html
@@ -11,13 +11,13 @@
 <body>
 
 <div class="container">
-    <h2>Fibonacci task</h2>
-    <p>To find which is the member of position n in Fibonacci sequence type in the number of element </p>
+    <h2>Ways to cover in 3 steps</h2>
+    <p>We want to calculate our possibility to cover the distance with 1, 2 and 3 steps.</p>
     <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
-            <label for="usr">Number of the element:</label>
+            <label for="usr">Enter distance to cover:</label>
             <input type="text" class="form-control" id="usr" name="firstNumber" >
-            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="1">
+            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="7">
         </div>
 
         <button type="submit" class="btn btn-default">Submit</button>
