--- a/web/views/palindromicSubsequence.html
+++ b/web/views/palindromicSubsequence.html
@@ -11,13 +11,13 @@
 <body>
 
 <div class="container">
-    <h2>Fibonacci task</h2>
-    <p>To find which is the member of position n in Fibonacci sequence type in the number of element </p>
+    <h2>The longest palindromic subsequence</h2>
+    <p>Given a string which we have to check how many symbols has the biggest palindrome which is included in the given one.</p>
     <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
-            <label for="usr">Number of the element:</label>
+            <label for="usr">Enter string (not more than 100 symbols):</label>
             <input type="text" class="form-control" id="usr" name="firstNumber" >
-            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="1">
+            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="10">
         </div>
 
         <button type="submit" class="btn btn-default">Submit</button>
