--- a/web/views/fibonacci.html
+++ b/web/views/fibonacci.html
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label for="usr">Number of the element:</label>
             <input type="text" class="form-control" id="usr" name="firstNumber" >
-            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="1">
+            <input type="hidden" class="form-control"  name="tasklabel" value="1">
         </div>
 
         <button type="submit" class="btn btn-default">Submit</button>
