--- a/web/views/interestingRows.html
+++ b/web/views/interestingRows.html
@@ -11,20 +11,18 @@
 <body>
 
 <div class="container">
-    <h2>Modification Fibonacci task</h2>
-    <p>To find which is the member of position n in Modification Fibonacci sequence type in the number of element </p>
-    <form class="form-inline" action="/action_page.php">
+    <h2>Interesting row</h2>
+    <p>To find which is the member of position n in Interesting row in the number of element </p>
+    <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
             <label for="usr">Number of the element:</label>
-            <input type="text" class="form-control" id="usr">
-            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="2">
-            </div>
+            <input type="text" class="form-control" id="usr" name="firstNumber" >
+            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="3">
+        </div>
 
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 </div>
 
 </body>
 </html>
-
-
