--- a/web/views/highLowEfforts.html
+++ b/web/views/highLowEfforts.html
@@ -12,7 +12,7 @@
 
 <div class="container">
     <h2>HighLowEfforts</h2>
-    <p>Given a fence with n posts and k colors, find out the number of ways of painting the fence such that at most 2 adjacent posts have the same color.</p>
+    <p> find the maximum amount of cost you can perform within these efforts.</p>
     <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
             <label for="usr">Enter low task</label>
