Added new tasks html to index.html

--- a/web/views/longSubWithDiffOne.html
+++ b/web/views/longSubWithDiffOne.html
@@ -15,7 +15,7 @@
     <p>To find how many numbers we have with difference one in the maximum sub sequence </p>
     <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
-            <label for="usr">Input: Sequence with integer numbers </label>
+            <label for="usr">Input: Sequence with integer numbers (Example: 1 2 3 4 5) </label>
             <input type="text" class="form-control" id="usr" name="firstNumber" >
             <input type="hidden" class="form-control" id="usr" name="tasklabel" value="4">
         </div>
