"exceptins" handling added

--- a/web/views/modification fibonacci.html
+++ b/web/views/modification fibonacci.html
@@ -13,7 +13,7 @@
 <div class="container">
     <h2>Modification Fibonacci task</h2>
     <p>To find which is the member of position n in Modification Fibonacci sequence type in the number of element </p>
-    <form class="form-inline" action="/action_page.php">
+    <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
             <label for="usr">Number of the element:</label>
             <input type="text" class="form-control" id="usr">
