added view to pathsWithoutCrossing

--- a/web/views/pathsWithoutCrossing.html
+++ b/web/views/pathsWithoutCrossing.html
@@ -11,20 +11,20 @@
 <body>
 
 <div class="container">
-    <h2>Modification Fibonacci task</h2>
-    <p>To find which is the member of position n in Modification Fibonacci sequence type in the number of element </p>
+    <h2>Paths without crossing</h2>
+    <p>Program to count number of ways to connect n (where n is even)
+        points on a circle such that no two connecting lines cross each other and every point
+        is connected with one other point. </p>
     <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
-            <label for="usr">Number of the element:</label>
+            <label for="usr">Number of the points:</label>
             <input type="text" class="form-control" id="usr" name="firstNumber">
-            <input type="hidden" class="form-control" id="usr" name="tasklabel" value="2">
-            </div>
+            <input type="hidden" class="form-control" name="tasklabel" value="8">
+        </div>
 
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 </div>
 
 </body>
 </html>
-
-
