added back button to forms

--- a/web/views/fence.html
+++ b/web/views/fence.html
@@ -22,7 +22,8 @@
             <input type="hidden" class="form-control" id="usr" name="tasklabel" value="13">
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <a href="../index.html"><button type="button" class="btn">Back</button></a>
     </form>
 </div>
 
