--- a/web/views/waysAsSumOfPosInt.html
+++ b/web/views/waysAsSumOfPosInt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Ways to write n as sum of two or more positive integers</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,7 +20,8 @@
             <input type="hidden" class="form-control" name="tasklabel" value="6">
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <a href="../index.html"><button type="button" class="btn">Back</button></a>
     </form>
 </div>
 
