--- a/web/views/friendPairs.html
+++ b/web/views/friendPairs.html
@@ -21,7 +21,8 @@
             <input type="hidden" class="form-control"  name="tasklabel" value="1">
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <a href="../index.html"><button type="button" class="btn">Back</button></a>
     </form>
 </div>
 
