--- a/web/views/modification fibonacci.html
+++ b/web/views/modification fibonacci.html
@@ -20,7 +20,8 @@
             <input type="hidden" class="form-control" id="usr" name="tasklabel" value="2">
             </div>
 
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
+        <a href="../index.html"><button type="button" class="btn">Back</button></a>
         </form>
 </div>
 
