--- a/web/views/pathsWithoutCrossing.html
+++ b/web/views/pathsWithoutCrossing.html
@@ -22,7 +22,8 @@
             <input type="hidden" class="form-control" name="tasklabel" value="8">
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <a href="../index.html"><button type="button" class="btn">Back</button></a>
     </form>
 </div>
 
