--- a/web/views/tileTheFloor.html
+++ b/web/views/tileTheFloor.html
@@ -24,7 +24,8 @@
             <input type="hidden" class="form-control" id="usr" name="tasklabel" value="12">
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <a href="../index.html"><button type="button" class="btn">Back</button></a>
     </form>
 </div>
 
