view to waysToSumArray added

--- a/web/views/waysToSumArray.html
+++ b/web/views/waysToSumArray.html
@@ -11,13 +11,15 @@
 <body>
 
 <div class="container">
-    <h2>The longest palindromic subsequence</h2>
-    <p>Given a string which we have to check how many symbols has the biggest palindrome which is included in the given one.</p>
+    <h2>Ways to sum to N using array elements with repetition</h2>
+    <p>To find how many ways we have to represent one number with a given array of numbers.</p>
     <form method="GET" class="form-inline" action="/calculate">
         <div class="form-group">
-            <label for="usr">Enter string (not more than 100 symbols):</label>
-            <input type="text" class="form-control" id="usr" name="firstNumber" >
-            <input type="hidden" class="form-control"  name="tasklabel" value="10">
+            <label for="usr">The the array separating elements by ",":</label>
+            <input type="text" class="form-control"  name="firstNumber" >
+            <label for="usr">the number which has to be represented:</label>
+            <input type="text" class="form-control" id="usr" name="secondNumber" >
+            <input type="hidden" class="form-control" name="tasklabel" value="5">
         </div>
 
         <button type="submit" class="btn btn-success">Submit</button>
