view to waysToSumArray fixed

--- a/web/views/waysToSumArray.html
+++ b/web/views/waysToSumArray.html
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label for="usr">The the array separating elements by ",":</label>
             <input type="text" class="form-control"  name="firstNumber" >
-            <label for="usr">the number which has to be represented:</label>
+            <label for="usr">The number which has to be represented:</label>
             <input type="text" class="form-control" id="usr" name="secondNumber" >
             <input type="hidden" class="form-control" name="tasklabel" value="5">
         </div>
