--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar class="mat-toolbar">
-  <div class="ua"><a [routerLink]="['/']" [ngStyle]="{'color' : 'black'}">UA</a></div>
-  <div class="transport"><a [routerLink]="['/']" [ngStyle]="{'color' : 'black'}">Transport</a></div>
+  <div class="ua"><a [routerLink]="['/main']" [ngStyle]="{'color' : 'black'}">UA</a></div>
+  <div class="transport"><a [routerLink]="['/main']" [ngStyle]="{'color' : 'black'}">Transport</a></div>
 </mat-toolbar>
