Add form to add transit

--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -31,3 +31,24 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </table>
 </div>
+
+<div class="AddTransit">
+  <h4>Add transit</h4>
+<form class="Test" (ngSubmit)="onSubmit()" #myForm="ngForm">
+  <table class="Test" cellspacing="0">
+    <tr>
+      <td>
+        <mat-form-field class="Name">
+          <input matInput placeholder="Name" id="name" [(ngModel)]="transit.name" name="name">
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="Category">
+          <input matInput placeholder="Category id" type="number" [(ngModel)]="transit.category.id" name="category.id">
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+  <button mat-flat-button type="submit" mat-button>Submit</button>
+</form>
+</div>
