--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="AddTransit">
-  <h4>Add transit</h4>
+  <h2 class="mat-h2">Add transit</h2>
 <form class="Test" (ngSubmit)="onSubmit()" #myForm="ngForm">
   <table class="Test" cellspacing="0">
     <tr>
@@ -49,6 +49,6 @@
       </td>
     </tr>
   </table>
-  <button mat-flat-button type="submit" mat-button>Submit</button>
+  <button mat-stroked-button type="submit" mat-button>Submit</button>
 </form>
 </div>
