--- a/src/app/components/feedback-criteria/feedback-criteria.component.html
+++ b/src/app/components/feedback-criteria/feedback-criteria.component.html
@@ -1,3 +1,4 @@
+<div class="feedbackForm">
 <br>
 <div class=" row">
   <div  class="col-md-12">
@@ -33,5 +34,4 @@
      </div>
 </div>
 <app-addfeedbackcriteria></app-addfeedbackcriteria>
-
-
+</div>
