--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -5,4 +5,8 @@
     <a [routerLink]="['/feedback']">
       <button mat-stroked-button type="submit">Feedback Criterias</button> </a>
   </div>
+  <div class="NewUser">
+    <a [routerLink]="['/user/add']">
+      <button mat-stroked-button type="submit">New User</button> </a>
+  </div>
 </mat-toolbar>
