--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -7,7 +7,7 @@
     </ng-container>
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef> Name</mat-header-cell>
-      <mat-cell *matCellDef="let transit"> {{transit.name}}</mat-cell>
+      <mat-cell *matCellDef="let transit" [routerLink]="['/stop', transit.id]"> {{transit.name}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="category_id">
       <mat-header-cell *matHeaderCellDef> Category Id</mat-header-cell>
