--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,6 @@
 <div class="slides">
   <div class="sometext">
-    <b>UATransport</b> is a system that allows the end users to find out how bad or how good the certain transportation method is.
-    It also allows users to share what they think of certain transportation method by leaving feedback, reporting complains, posting comments, etc.
+    <b>UATransport</b> {{ 'MAIN-TEXT' | translate}}
 
   </div>
   <div class="pictures">
