Add temporary image of some route with stops

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,16 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
-      <canvas id="lineChart" width="150" height="50"></canvas>
+      <img src="https://city-adm.lviv.ua/img/x/0/01in-aeea220e217cab5d092358cc767bcdd5.jpg"
+           style="width:600px;height:200px;">
     </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
     <div class="col-sm-6">
+      <canvas id="lineChart" width="150" height="50"></canvas>
     </div>
   </div>
 </div>
