Non-ext got view as buttons. Fix sidenav. Fix localization. Fix categories to new categoryController.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
-
+<button class="mainbutton" (click)="open()"></button>
+<mat-sidenav-container class="container">
+  <mat-sidenav #sidenav mode="side" hasBackdrop="false">
+    <div class="excategory">
+      <app-excategory></app-excategory>
+    </div>
+  </mat-sidenav>
+</mat-sidenav-container>
 <app-menu></app-menu>
 <div class="window">
-
-  <app-sidenav></app-sidenav>
 </div>
 <router-outlet></router-outlet>
 
