--- a/src/app/components/excategory/excategory.component.css
+++ b/src/app/components/excategory/excategory.component.css
@@ -1,23 +1,37 @@
-.mat-elevation-z8{
+.mat-elevation-z8 {
   height: inherit;
 }
-.excategoryButton{
+
+.top-categories {
   position: relative;
   z-index: 20;
   width: 100px;
-  height:  100px;
+  height: 100px;
   margin: 0;
   font-size: 10px;
   text-align: center;
   font-weight: bold;
-  box-shadow: inset -3px -3px 5px 2px rgba(217,214,217,0.58);;
+  box-shadow: inset -3px -3px 5px 2px rgba(217, 214, 217, 0.58);
 }
-.excategoryButton:hover{
+
+.top-categories:hover {
   background: url("../../../assets/buttonline.png") no-repeat left;
 }
-.excategoryMenu{
-  width: 200px;
+
+.city {
+  display: block;
+  width: 100px;
+  height: 50px;
 }
+
+.city-icon{
+  position: absolute;
+  display: block;
+  right: 0;
+  top: 2px;
+;
+}
+
 a {
   text-decoration: none;
 }
