--- a/src/app/components/excategory/excategory.component.html
+++ b/src/app/components/excategory/excategory.component.html
@@ -1,15 +1,19 @@
- <div *ngFor="let category of list | async">
-    <button class="excategoryButton"  mat-button [matMenuTriggerFor]="nextlevel" (click)="getCities(category.name)">
-      {{category.name}}<br/>
-      <img src="{{serverURL}}{{category.iconURL}}"/>
-      {{category.iconurl}}
-    </button>
-    <mat-menu class="excategoryMenu" #nextlevel="matMenu">
-      <div *ngFor="let city of cities | async">
-          <a [routerLink]="['/category', category.name, city.name]">
-            <button  mat-menu-item >{{city.name}}</button>
-          </a>
-      </div>
-    </mat-menu>
-  </div>
+<div *ngFor="let category of list | async">
+
+
+
+  <button class="top-categories" mat-button [matMenuTriggerFor]="nextlevel" (click)="getCities(category.name)">
+    {{category.name}}<br/>
+    <img src="{{serverURL}}{{category.iconURL}}"/>
+  </button>
+
+  <mat-menu class="cities" #nextlevel="matMenu">
+    <div *ngFor="let city of cities | async">
+      <a [routerLink]="['/category', category.name, city.name]">
+        <button mat-menu-item class="city">{{city.name}}<img  class="city-icon" src="{{serverURL}}{{city.iconURL}}"/></button>
+      </a>
+    </div>
+  </mat-menu>
+
+</div>
 
