--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="slides">
   <div class="sometext">
-    <b>UATransport</b> {{ 'MAIN-TEXT' | translate}}
+    <b>UA Transport</b> {{ 'MAIN-TEXT' | translate}} {{'word' | translate}}
 
   </div>
   <div class="pictures">
