--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,4 +5,27 @@ body {
   background-color: white;
 }
 
+.container {
+  position: absolute;
+  top: 110px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100px;
+}
+.mainbutton{
+  background: url("../assets/menu.png") no-repeat center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+  box-shadow: 5px 5px 6px 2px rgba(217,214,217,1);
+}
+.mat-sidenav{
+  position: absolute;
+  top: 0;
+}
+
+
 
