--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,8 +1,7 @@
 
 .mat-toolbar{
   position: absolute;
-  z-index: 10;
-  left: 105px;
+  left: 100px;
   top: 0;
   height: 100px;
   background-color: white;
@@ -29,7 +28,7 @@ a:active {
 
 }
 .transport{
-  margin: 20px 20px 20px 0px;
+  margin: 20px 50px 20px 0px;
   font-size: 28px;
   font-weight: normal;
   font-family: Tahoma;
@@ -38,9 +37,26 @@ a:active {
 
 .criteriaButton{
   position: relative;
-  left: 600px;
+  left: 400px;
 }
 .NewUser{
   position: relative;
-  left: 700px;
+  left: 500px;
 }
+
+.container {
+  position: absolute;
+  top: 0px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100px;
+}
+
+.lang{
+  margin: 0 0 0 8px;
+}
+
+
+
+
