--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,15 +1,16 @@
 <mat-toolbar class="mat-toolbar">
   <div class="ua"><a [routerLink]="['/main']" [ngStyle]="{'color' : 'black'}">UA</a></div>
-  <div class="transport"><a [routerLink]="['/main']" [ngStyle]="{'color' : 'black'}">Transport</a></div>
-  <button (click)="switchLanguage('en')">en</button>
-
-  <button (click)="switchLanguage('ua')">ua</button>
+  <div class="transport"><a [routerLink]="['/main']" [ngStyle]="{'color' : 'black'}">Transport</a>
+    <a class="lang" (click)="switchLanguage('ua')"><img src="../../../assets/img/ukraine.png"></a>
+    <a class="lang" (click)="switchLanguage('en')"><img src="../../../assets/img/united-kingdom.png"></a></div>
   <div class="criteriaButton">
     <a [routerLink]="['/feedback']">
-      <button mat-stroked-button type="submit">{{ 'Feedback'| translate}}</button> </a>
+      <button mat-stroked-button type="submit">{{ 'Feedback'| translate}}</button>
+    </a>
   </div>
   <div class="NewUser">
     <a [routerLink]="['/user/add']">
-      <button mat-stroked-button type="submit">{{'User' | translate}}</button> </a>
+      <button mat-stroked-button type="submit">{{'User' | translate}}</button>
+    </a>
   </div>
 </mat-toolbar>
