--- a/src/app/components/non-ex-category/non-ex-category.component.css
+++ b/src/app/components/non-ex-category/non-ex-category.component.css
@@ -10,6 +10,7 @@
   /*width: 100%;*/
 /*}*/
 
+
 .mat-form-field {
   font-size: 14px;
   width: 100%;
@@ -17,5 +18,27 @@
 .mat-elevation-z8{
   width: 800px;
   margin: 150px auto;
+}
+.non-category-wrapper{
+  width: 1200px;
+  margin: 150px auto;
+}
+.non-category{
+  display: inline-block;
+  width: 210px;
+  height: 160px;
+  font-weight: bold;
+  margin: 0 30px;
+  box-shadow: 0px 0px 5px 1px rgba(181,181,181,1);
+}
+.name-and-icon{
+  position: relative;
+  height: 140px;
+  width: 140px;
+  top: 10px;
+  left: 0px;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
 }
 
