--- a/src/app/components/non-ex-category/non-ex-category.component.html
+++ b/src/app/components/non-ex-category/non-ex-category.component.html
@@ -1,26 +1,12 @@
 <div class="non">
-
-
-  <table mat-table [dataSource]="list" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> Id</mat-header-cell>
-      <mat-cell *matCellDef="let category"> {{category.id}}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> Name</mat-header-cell>
-      <mat-cell *matCellDef="let category" [routerLink]="['/category', category.nextLevelCategory.nextLevelCategory.name, category.nextLevelCategory.name,
-      category.id]"> {{category.name}}
-      </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="nextLevelCategory_name">
-      <mat-header-cell *matHeaderCellDef> NextLevelCategory</mat-header-cell>
-      <mat-cell *matCellDef="let category"> {{category.nextLevelCategory.name}}</mat-cell>
-    </ng-container>
-
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </table>
+  <div class="non-category-wrapper">
+    <div class="non-category" *ngFor="let category of list | async">
+      <div class="name-and-icon" [routerLink]="['/category', category.nextLevelCategory.nextLevelCategory.name, category.nextLevelCategory.name,category.id]">
+      <!--<div class="name-and-icon">-->
+        <img  src="{{serverURL}}{{category.iconURL}}"/><br/>
+        {{category.name}}
+      </div>
+    </div>
+  </div>
+  <!--<app-transits></app-transits>-->
 </div>
-<!--[routerLink]="['/category', category.nextLevelCategory.nextLevelCategory.name, category.nextLevelCategory.name,-->
-<!--category.id]"-->
