--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -10,7 +10,7 @@
     </ng-container>
     <ng-container matColumnDef="route">
       <mat-header-cell *matHeaderCellDef> Route </mat-header-cell>
-      <mat-cell *matCellDef="let transit"> {{transit.stops[0].street }} - {{ transit.stops[transit.stops.length-1].street }}</mat-cell>
+      <mat-cell *matCellDef="let transit"[routerLink]="['/show-transit-scheme', transit.id]"> {{transit.stops[0].street }} - {{ transit.stops[transit.stops.length-1].street }}</mat-cell>
     </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
