--- a/src/app/components/excategory/excategory.component.css
+++ b/src/app/components/excategory/excategory.component.css
@@ -24,12 +24,11 @@
   height: 50px;
 }
 
-.city-icon{
+.city-icon {
   position: absolute;
   display: block;
   right: 0;
-  top: 2px;
-;
+  top: 2px;;
 }
 
 a {
