--- a/src/app/components/excategory/excategory.component.html
+++ b/src/app/components/excategory/excategory.component.html
@@ -1,7 +1,6 @@
 <div *ngFor="let category of list | async">
 
 
-
   <button class="top-categories" mat-button [matMenuTriggerFor]="nextlevel" (click)="getCities(category.name)">
     {{category.name}}<br/>
     <img src="{{serverURL}}{{category.iconURL}}"/>
@@ -10,7 +9,8 @@
   <mat-menu class="cities" #nextlevel="matMenu">
     <div *ngFor="let city of cities | async">
       <a [routerLink]="['/category', category.name, city.name]">
-        <button mat-menu-item class="city">{{city.name}}<img  class="city-icon" src="{{serverURL}}{{city.iconURL}}"/></button>
+        <button mat-menu-item class="city">{{city.name}}<img class="city-icon" src="{{serverURL}}{{city.iconURL}}"/>
+        </button>
       </a>
     </div>
   </mat-menu>
