--- a/src/app/components/non-ex-category/non-ex-category.component.html
+++ b/src/app/components/non-ex-category/non-ex-category.component.html
@@ -1,9 +1,10 @@
 <div class="non">
   <div class="non-category-wrapper">
     <div class="non-category" *ngFor="let category of list | async">
-      <div class="name-and-icon" [routerLink]="['/category', category.nextLevelCategory.nextLevelCategory.name, category.nextLevelCategory.name,category.id]">
-      <!--<div class="name-and-icon">-->
-        <img  src="{{serverURL}}{{category.iconURL}}"/><br/>
+      <div class="name-and-icon"
+           [routerLink]="['/category', category.nextLevelCategory.nextLevelCategory.name, category.nextLevelCategory.name,category.id]">
+        <!--<div class="name-and-icon">-->
+        <img src="{{serverURL}}{{category.iconURL}}"/><br/>
         {{category.name}}
       </div>
     </div>
