--- a/src/app/components/feedback-criteria/feedback-criteria.component.html
+++ b/src/app/components/feedback-criteria/feedback-criteria.component.html
@@ -1,37 +1,41 @@
 <div class="feedbackForm">
-<br>
-<div class=" row">
-  <div  class="col-md-12">
-     <button class="btn btn-success"> New Criteria</button>
+  <br>
+  <div class=" row">
+    <div class="col-md-12">
+      <button class="btn btn-success"> New Criteria</button>
+    </div>
   </div>
-</div>
-<hr>
-<div class="row">
-  <div class="col-md-12">
+  <hr>
+  <div class="row">
+    <div class="col-md-12">
 
-    <table class="table">
-      <thead class="thead-light">
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Question</th>
-        <th scope="col">Group_Id</th>
-        <th scope="col">Type</th>
-        <th scope="col">EDITE</th>
-        <th scope="col">DELETE</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let f of feedbackCs">
-        <th>{{f.id}}</th>
-        <th> {{f.question}}</th>
-        <td>{{f.groupId}}</td>
-        <td>{{f.type}}</td>
-        <th> <button type="button" class="btn btn-light">EDITE</button></th>
-        <th><button type="button" class="btn btn-danger">DELETE</button></th>
-      </tr>
-      </tbody>
-    </table>
-     </div>
-</div>
-<app-addfeedbackcriteria></app-addfeedbackcriteria>
+      <table class="table">
+        <thead class="thead-light">
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Question</th>
+          <th scope="col">Group_Id</th>
+          <th scope="col">Type</th>
+          <th scope="col">EDITE</th>
+          <th scope="col">DELETE</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let f of feedbackCs">
+          <th>{{f.id}}</th>
+          <th> {{f.question}}</th>
+          <td>{{f.groupId}}</td>
+          <td>{{f.type}}</td>
+          <th>
+            <button type="button" class="btn btn-light">EDITE</button>
+          </th>
+          <th>
+            <button type="button" class="btn btn-danger">DELETE</button>
+          </th>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <app-addfeedbackcriteria></app-addfeedbackcriteria>
 </div>
