--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,25 +1,30 @@
 
-.mat-toolbar{
+.mat-toolbar {
   position: absolute;
   left: 100px;
   top: 0;
   height: 100px;
   background-color: white;
-  box-shadow: 1px 5px 6px 2px rgba(217,214,217,1);
+  box-shadow: 1px 5px 6px 2px rgba(217, 214, 217, 1);
 }
-a{
+
+a {
   text-decoration: none;
 }
-a:visited{
+
+a:visited {
   text-decoration: none;
 }
-a:hover{
+
+a:hover {
   text-decoration: none;
 }
+
 a:active {
   text-decoration: none;
 }
-.ua{
+
+.ua {
   margin: 20px 15px 20px 100px;
   font-size: 30px;
   font-weight: bold;
@@ -27,7 +32,8 @@ a:active {
   color: #000000;
 
 }
-.transport{
+
+.transport {
   margin: 20px 50px 20px 0px;
   font-size: 28px;
   font-weight: normal;
@@ -35,11 +41,12 @@ a:active {
   color: black;
 }
 
-.criteriaButton{
+.criteriaButton {
   position: relative;
   left: 400px;
 }
-.NewUser{
+
+.NewUser {
   position: relative;
   left: 500px;
 }
@@ -53,7 +60,7 @@ a:active {
   width: 100px;
 }
 
-.lang{
+.lang {
   margin: 0 0 0 8px;
 }
 
