Fix criteriaButton`s routerLink

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,7 +4,7 @@
     <a class="lang" (click)="switchLanguage('ua')"><img src="../../../assets/img/ukraine.png"></a>
     <a class="lang" (click)="switchLanguage('en')"><img src="../../../assets/img/united-kingdom.png"></a></div>
   <div class="criteriaButton">
-    <a [routerLink]="['/feedback']">
+    <a [routerLink]="['/feedback-criteria']">
       <button mat-stroked-button type="submit">{{ 'Feedback'| translate}}</button>
     </a>
   </div>
