--- a/src/app/components/stops/stops-grid.component.html
+++ b/src/app/components/stops/stops-grid.component.html
@@ -1,12 +1,14 @@
 <div class="demo-grid-list">
-<mat-grid-list cols="7" rowHeight="50px">
-  <mat-grid-tile
+  <mat-grid-list cols="7" rowHeight="50px">
+    <mat-grid-tile
       *ngFor="let tile of stopsList | async">
-    <!--{{tile.street}}-->
-     <input type="checkbox" [id]="tile.id" [name]="tile" [value]="tile.street" aria-labelledby="ariaid">
-    <div><label id="ariaid">{{tile.street}}</label></div>
-  </mat-grid-tile>
-</mat-grid-list>
+      <!--{{tile.street}}-->
+      <input type="checkbox" [id]="tile.id" [name]="tile" [value]="tile.street" aria-labelledby="ariaid">
+      <div><label id="ariaid">{{tile.street}}</label></div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
+  <app-raiting-diagram [id]="idTransit" ]></app-raiting-diagram>
 </div>
 <!-- <mat-card>
   <mat-card-title>Ratio-height grid list</mat-card-title>
@@ -21,3 +23,4 @@
   </mat-card-content> -->
 <!--
 </mat-card> -->
+
