--- a/src/app/components/stops/stops-grid.component.html
+++ b/src/app/components/stops/stops-grid.component.html
@@ -8,7 +8,7 @@
     </mat-grid-tile>
   </mat-grid-list>
   <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
-  <!--<app-raiting-diagram [id]="idTransit" ]></app-raiting-diagram>-->
+  <app-raiting-diagram [id]="idTransit"></app-raiting-diagram>
 </div>
 <!-- <mat-card>
   <mat-card-title>Ratio-height grid list</mat-card-title>
