Change access to endpoints according to backend changes

--- a/src/app/components/stops/components/average-rate/average-rate.component.html
+++ b/src/app/components/stops/components/average-rate/average-rate.component.html
@@ -1,3 +1,4 @@
-<p>
-  average-rate works!
-</p>
+<div class="form-group">
+  <p>Average rate</p>
+  <button mat-fab color="accent">{{averageRate}}</button>
+</div>
