--- a/src/app/components/stops/components/raiting-diagram/raiting-diagram.component.css
+++ b/src/app/components/stops/components/raiting-diagram/raiting-diagram.component.css
@@ -1,6 +1,6 @@
 .container {
-  position: fixed;
-  left: 100px;
+  position: relative;
+  right: 450px;
   width: 300px;
   height: 300px;
   margin: 100px auto;
