--- a/src/app/components/stops/stops-grid.component.html
+++ b/src/app/components/stops/stops-grid.component.html
@@ -2,25 +2,19 @@
   <mat-grid-list cols="7" rowHeight="50px">
     <mat-grid-tile
       *ngFor="let tile of stopsList | async">
-      <!--{{tile.street}}-->
       <input type="checkbox" [id]="tile.id" [name]="tile" [value]="tile.street" aria-labelledby="ariaid">
       <div><label id="ariaid">{{tile.street}}</label></div>
     </mat-grid-tile>
   </mat-grid-list>
-  <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
+  <app-average-rate [id]="idTransit"></app-average-rate>
+  <mat-tab-group>
+    <mat-tab label="By hours">
+      <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
+    </mat-tab>
+    ,
+    <mat-tab label="By stops">
+      <app-busy-stops-diagram [id]="idTransit"></app-busy-stops-diagram>
+    </mat-tab>
+  </mat-tab-group>
   <app-raiting-diagram [id]="idTransit"></app-raiting-diagram>
 </div>
-<!-- <mat-card>
-  <mat-card-title>Ratio-height grid list</mat-card-title>
-  <mat-card-content class="demo-basic-list">
-    <mat-grid-list [cols]="(stopsList | async)?.length" rowHeight="80" gutterSize="1px">
-      <mat-grid-tile *ngFor="let tile of stopsList | async" [style.background]="'lightblue'">
-        {{tile.street}}
-
-      </mat-grid-tile>
-
-    </mat-grid-list>
-  </mat-card-content> -->
-<!--
-</mat-card> -->
-
