--- a/src/app/components/question/add-question/add-question.component.css
+++ b/src/app/components/question/add-question/add-question.component.css
@@ -1,5 +1,8 @@
 .addquestion{
-    font-size: 14px;
-    width: 50%;
-    margin: 150px 400px;
-  }
+  font-size: 14px;
+  width: 50%;
+  margin: 150px 400px;
+}
+.mat-elevation-z8{
+  width: 100%; 
+}
