--- a/src/app/components/question/one-question/one-question.component.css
+++ b/src/app/components/question/one-question/one-question.component.css
@@ -1,12 +1,13 @@
-
-.question{
+.onequestion{
     font-size: 14px;
     width: 50%;
     margin: 150px 400px;
   }
-  .mat-elevation-z8{
-    width: 100%; 
-  }
   .mat-raised-button{
-  margin-left: 75%;
+
+    margin: 10%;
+  }
+  .mat-form-field {
+     
+      width: 70%;
   }
