--- a/src/app/components/stops/components/add-feedback/add-feedback.component.html
+++ b/src/app/components/stops/components/add-feedback/add-feedback.component.html
@@ -1,12 +1,19 @@
-<h1>
-  Transit № {{data.number}}
-</h1>
-<form  [formGroup]="feedbackForm"  >
-    <mat-form-field>
-      <input  type ="text" formControlName="answer" matInput placeholder="answer"  >
-    </mat-form-field>
-    <button type="submit" mat-raised-button (click)="onSubmit()"  >{{ 'Save' | translate}}</button>
-    <button mat-raised-button (click)="close()">{{ 'Close' | translate}}</button>
-  </form>
+<div class="addfeedback">
+  <div class="col-md-7">
+    <form class="example-form">
+ <h1> Transit № {{transitId}} </h1>
+ <mat-form-field class="answer">
+  <textarea matInput [(ngModel)]="feedback.answer" placeholder="answer" name="answer"></textarea>
+</mat-form-field>
+<!-- 
+<mat-form-field appearance="standard">
+  <mat-label>{{feedback.answer}}</mat-label>
+  <input matInput placeholder="answer" [(ngModel)]="feedback.answer">
+</mat-form-field> -->
+<button mat-raised-button (click) = "save()">Save </button>
+<button mat-raised-button (click)="close()">Close</button>
+</form>
+</div>
+</div> 
   
 
