--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -15,27 +15,27 @@
       </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; let transit; columns: displayedColumns;" [routerLink]="['/show-transit-scheme', transit.id]"></mat-row>
+    <mat-row *matRowDef="let transit; columns: displayedColumns;" [routerLink]="['/show-transit-scheme', transit.id]"></mat-row>
   </table>
 </div>
-<div class="AddTransit">
-  <h2 class="mat-h2">Add transit</h2>
-  <form class="Test" (ngSubmit)="onSubmit()" #myForm="ngForm">
-    <table class="Test" cellspacing="0">
-      <tr>
-        <td>
-          <mat-form-field class="Name">
-            <input matInput placeholder="Name" id="name" [(ngModel)]="transit.name" name="name">
-          </mat-form-field>
-        </td>
-        <td>
-          <mat-form-field class="Category">
-            <input matInput placeholder="Category id" type="number" [(ngModel)]="transit.categoryId" name="category.id">
-          </mat-form-field>
-        </td>
-      </tr>
-    </table>
-    <button mat-stroked-button type="submit">Submit</button>
-  </form>
-</div>
+<!--<div class="AddTransit">-->
+  <!--<h2 class="mat-h2">Add transit</h2>-->
+  <!--<form class="Test" (ngSubmit)="onSubmit()" #myForm="ngForm">-->
+    <!--<table class="Test" cellspacing="0">-->
+      <!--<tr>-->
+        <!--<td>-->
+          <!--<mat-form-field class="Name">-->
+            <!--<input matInput placeholder="Name" id="name" [(ngModel)]="transit.name" name="name">-->
+          <!--</mat-form-field>-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<mat-form-field class="Category">-->
+            <!--<input matInput placeholder="Category id" type="number" [(ngModel)]="transit.categoryId" name="category.id">-->
+          <!--</mat-form-field>-->
+        <!--</td>-->
+      <!--</tr>-->
+    <!--</table>-->
+    <!--<button mat-stroked-button type="submit">Submit</button>-->
+  <!--</form>-->
+<!--</div>-->
 
