Remove bug with mat-tab in sing transit page

--- a/src/app/components/stops/components/busy-hours-diagram/busy-hours-diagram.component.html
+++ b/src/app/components/stops/components/busy-hours-diagram/busy-hours-diagram.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <p style="text-align: center">{{'By-Hour' | translate}}</p>
     <canvas id="lineChart"></canvas>
   </div>
 </div>
