--- a/src/app/components/stops/components/average-rate/average-rate.component.html
+++ b/src/app/components/stops/components/average-rate/average-rate.component.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-  <p>Average rate</p>
+  <p>{{'Average-Rate' | translate}}</p>
   <button mat-fab color="accent">{{averageRate}}</button>
 </div>
