--- a/src/app/components/stops/components/busy-hours-diagram/busy-hours-diagram.component.css
+++ b/src/app/components/stops/components/busy-hours-diagram/busy-hours-diagram.component.css
@@ -1,7 +1,5 @@
-/*.container {*/
-  /*position: relative;*/
-  /*right: 50px;*/
-  /*top: 50px;*/
-  /*width: 550px;*/
-  /*height: 200px;*/
-/*}*/
+.container {
+  position: absolute;
+  left: auto;
+width: 40%;
+}
