--- a/src/app/components/stops/components/busy-stops-diagram/busy-stops-diagram.component.html
+++ b/src/app/components/stops/components/busy-stops-diagram/busy-stops-diagram.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <p style="text-align: center">{{'By-Stop' | translate}}</p>
     <canvas id="lineChart1"></canvas>
   </div>
 </div>
