--- a/src/app/components/stops/components/raiting-diagram/raiting-diagram.component.css
+++ b/src/app/components/stops/components/raiting-diagram/raiting-diagram.component.css
@@ -1,7 +1,8 @@
 .container {
-  position: relative;
-  right: 450px;
-  width: 300px;
-  height: 300px;
+  position: absolute;
+  top: 10%;
+  left: 100px;
+  width: 20%;
+  height: 20%;
   margin: 100px auto;
 }
