add google direction component

--- a/src/app/components/feedback-criteria/feedback-criteria.component.css
+++ b/src/app/components/feedback-criteria/feedback-criteria.component.css
@@ -1,4 +1,9 @@
-.feedbackForm{
-  width: 800px;
-  margin: 150px auto;
+
+.feedbackCriteria{
+  font-size: 14px;
+  width: 50%;
+  margin: 150px 400px;
+}
+.mat-elevation-z8{
+  width: 100%; 
 }
